--- a/src/pycon2025/style.scss
+++ b/src/pycon2025/style.scss
@@ -15,7 +15,7 @@ $right-arrow: "\2192"; // Unicode character for right arrow
 /*
 Note: This theme uses the Roboto font family, which it imports from Google
   Fonts to ensure consistent weighting in addition to availability. While
-  you can use a local installation of Roboto, this is generally not 
+  you can use a local installation of Roboto, this is generally not
   recommended since the weighting will likely be wrong (probably too
   light). OTOH, importing from Google Fonts can cause some issues in
   certain secure environments due the external CDN (see:
@@ -54,6 +54,7 @@ $selection-bg: #26351c !default;
   font-weight: lighter;
   margin-top: 0.2em;
   line-height: 1;
+  font-size: 0.8em;
 }
 
 // title and headings
@@ -146,6 +147,10 @@ $selection-bg: #26351c !default;
   // font-weight: 300;
   font-weight: lighter;
   padding-left: 16px;
+
+  li {
+    font-size: 0.8em;
+  }
 
   li::marker {
     color: mix($accent, white, 70%);
